[package]
name = "discard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.39.2", features = ["full"]}
tokio-tungstenite = {version = "0.23.1", features = ["native-tls"]}
serde = {version= "1.0.208", features = ["derive"]}

serde_json = "1.0.125"
futures-util = "0.3.30"
http = "1.1.0"
native-tls = "0.2.12"
